# SolarSystemSim

./: .gitignore  CMakeLists.txt  README.md  SolarSystem.sln  SolarSystem.vcxproj  SolarSystem.vcxproj.filters  SolarSystemSim.kdev4
.kdev4/: SolarSystemSim.kdev4
Debug/: SolarSystem.ilk  vc141.idb
Debug/SolarSystem.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  SolarSystem.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
include/: CelestialBody.h  Initial.h  Solver.h  Solver.sync-conflict-20170812-120044-HCOLXAY.h  Solver2.h  VectorNd.h
src/: CelestialBody.cpp  Initial.cpp  Solver.cpp  Solver2.cpp  Test (Joel Egglesoton's conflicted copy 2017-09-21).cpp  Test.cpp  main.cpp
